<resources>
    <string-array name="market_unit">
        <item>RMB</item>
        <item>EXP</item>
        <item>POS</item>
    </string-array>
    <string-array name="pager_title">
        <item>打赏人数</item>
        <item>大图下载</item>
        <item>付费观看</item>
    </string-array>
    <string name="note_coin_setting_help">&#160;&#160;必选标签选择除&lt;临摹&gt;以外可用!</string>
    <string name="note_coin_ischain_trade">接龙作品不可交易</string>
    <string name="note_coin_istogether_trade">合绘作品不可交易</string>
    <string name="opengl_cannot_downloadbigimg">高级画板暂不支持下载高清图</string>
    <string name="note_play_help_level">&#160;&#160;目前等级小于3级!</string>
    <string name="note_download_help_level">&#160;&#160;目前等级小于3级!</string>
    <string name="points_detucted">提交作品扣除5积分</string>
    <string name="hd_start_download">开始下载图片</string>
    <string name="hd__download_have_no">高清图尚未生成,请稍后再试</string>
    <string name="hd_is_downloading">图片正在下载中&#8230;</string>
    <string name="reward_list_none">此处暂无承包商</string>
    <string name="reward_list_tip_pay">支付了</string>
    <string name="reward_list_tip_reward">打赏了</string>
    <string name="noteinfo_sure_setting">确认设置</string>
    <string name="coin_setting_range">画币范围:</string>
    <string name="coin_setting_big">数量超过最大值!</string>
    <string name="coin_setting_small">数量小于最小值!</string>
    <string name="coin_setting_zero">询价价格不能为0</string>
    <string name="coin_setting_zero_exchange">交易价格不能为0</string>
    <string name="coin_setting_system">不能低于系统设置询价金额</string>
    <string name="hd_down_failed">图片下载失败!</string>
    <string name="hd_save_in">图片已保存至相册</string>
    <string name="progress_paying">正在支付,请稍后&#8230;</string>
    <string name="chose_way_to_pay2">请选择支付方式</string>
    <string name="chose_way_to_pay">选择支付方式</string>
    <string name="confirm_to_pay">确认支付</string>
    <string name="pay_with_hb">画币支付</string>
    <string name="need_to_pay">需要支付画币</string>
    <string name="tip_download_tail">画币下载高清图吗?</string>
    <string name="tip_play_tail">画币观看过程吗?</string>
    <string name="tip_sure_pay_head">确定支付</string>
    <string name="comment_say_something">说点什么&#8230;</string>
    <string name="note_to_think">我再想想</string>
    <string name="note_to_play">继续观看</string>
    <string name="note_voice_close">点击关闭声音</string>
    <string name="note_voice_open">点击打开声音</string>
    <string name="note_to_download">继续下载</string>
    <string name="note_pay_watch">¥付费观看</string>
    <string name="note_tradable">可交易</string>
    <string name="note_traded">已交易</string>
    <string name="noteinfo_toast_settitle">请指定标题</string>
    <string name="noteinfo_toast_choselabel">请选择标签</string>
    <string name="noteinfo_setting_finish">设置完成</string>
    <string name="noteinfo_setting_hb">设置画币</string>
    <string name="noteinfo_input_hb">输入画币数</string>
    <string name="noteinfo_input_inquiry">输入最低询价价格</string>
    <string name="noteinfo_copyright_setting">版权交易金额设置</string>
    <string name="noteinfo_copyright_exchange">版权交易</string>
    <string name="noteinfo_copyright_buy_toast_title">购买提醒</string>
    <string name="noteinfo_copyright_buy_content"><![CDATA[您将花费<font color="#29cc88">%1$d</font>画币购买%2$s的作品<br/>《%3$s》]]></string>
    <string name="noteinfo_copyright_buy_subcontent">%1$d画币(作品费用)+%2$d画币(交易手续费)</string>
    <string name="noteinfo_copyright_buy_btn">确认购买</string>
    <string name="noteinfo_copyright_hb">转让金额</string>
    <string name="i_agree">我同意</string>
    <string name="noteinfo_copyright_agree">《版权交易协议》</string>
    <string name="noteinfo_copyright_agree_title">版权交易协议</string>
    <string name="noteinfo_copyright_hb_wrong">交易价格异常,请退出重试</string>
    <string name="noteinfo_copyright_buy_toast">您总共将花费%1$d画币购买%2$s的《%3$s》</string>
    <string name="noteinfo_copyright_buy_subtoast"><![CDATA[作品版权交易服务费 <font color="#29CC88">%1$d</font> 画币]]></string>
    <string name="noteinfo_getcharge_failed">获取支付信息失败,请稍后再试</string>
    <string name="note_exchange_buy_failed">作品购买失败,请稍后再试</string>
    <string name="note_exchange_buy_title"><![CDATA[此幅作品所有权交易需要 <big><big><font color="#ffac23">%1$d</font></big></big> 画币]]></string>
    <string name="note_exchange_buy_content">

        <![CDATA[
        <font color="#333333" size="7">购买者将获得：</font><br/>
        <font color="#29CC88" size="2">一. 本作品受《中华人民共和国著作权法》保护的13项权利：</font><br/>
        1.复制权\t
        2.发行权\t
        3.出租权\t
        4.展览权\t
        5.表演权\t
        6.放映权\t
        7.广播权\t
        8.信息网络传播权\t
        9.摄制权\t
        10.改编权\t
        11.翻译权\t
        12.汇编权\t
        13.应当由著作权人享有的其他权利。<br/>
        <font color="#29CC88" size="16">二. 本作品在画吧的3项权利：</font><br/>
        1.作品数据控制权<br/>
        2.增值收入归属权<br/>
        3.所有者信息展示权<br/>
        ]]>
    </string>
    <string name="note_owner_str">版权所有者</string>
    <string name="note_author_str">作品作者</string>
    <string name="note_together_king">发起者</string>
    <string name="note_together_he">合绘人</string>
    <string name="note_together">合绘</string>
    <string name="note_input_pwd">密码错误无法进行合绘</string>
    <string name="note_input_length">密码长度不够</string>
    <string name="note_input_noinput">请输入密码</string>
    <string name="note_reset_title">作品信息修改</string>
    <string name="note_reset_btn_str">修改</string>
    <string name="note_reset_success">作品信息修改成功</string>
    <string name="note_reset_failed">作品信息修改失败</string>
    <string name="note_reset_notclick">此项不可二次编辑</string>
    <string name="note_exchange_buying">正在购买&#8230;</string>
    <string name="noteinfo_pay_help">付费查看过程</string>
    <string name="noteinfo_grant_help">允许下载高清图</string>
    <string name="noteinfo_label_edit">编辑标签</string>
    <string name="noteinfo_label_opus">作品标签</string>
    <string name="noteinfo_original">原作出处</string>
    <string name="noteinfo_must_input">(必填)</string>
    <string name="noteinfo_advice_input">(建议填写)</string>
    <string name="noteinfo_ciyuan_book">次元册</string>
    <string name="noteinfo_original_mark">原作标签:</string>
    <string name="noteinfo_main_role">主要角色:</string>
    <string name="noteinfo_label_action">活动标签</string>
    <string name="noteinfo_title_pay">付费观看过程</string>
    <string name="noteinfo_title_grant">授权</string>
    <string name="noteinfo_note_publish">发布</string>
    <string name="noteinfo_radio_no">否</string>
    <string name="noteinfo_radio_yes">是</string>
    <string name="noteinfo_pay_hint">免费观看过程</string>
    <string name="noteinfo_download_title">下载高清图</string>
    <string name="noteinfo_grant_hint">不允许下载高清图</string>
    <string name="noteinfo_explain_hint">撰写内容</string>
    <string name="noteinfo_label_hint">选择标签</string>
    <string name="noteinfo_title_hint">填写标题(禁用符号&lt; &gt; &amp;)</string>
    <string name="noteinfo_title_chains">接龙</string>
    <string name="noteinfo_title_together">合绘</string>
    <string name="noteinfo_title_exchange">版权交易</string>
    <string name="noteinfo_title_exchange_subtitle">出售作品版权, 获得更多收入!</string>
    <string name="noteinfo_title_explain">配文</string>
    <string name="noteinfo_title_label">标签</string>
    <string name="noteinfo_title_left">标题</string>
    <string name="title_noteinfo_setting">作品信息</string>
    <string name="mode_day">白天模式</string>
    <string name="mode_night">夜间模式</string>
    <string name="loading_skin">正在加载皮肤</string>
    <string name="app_name">hawaii</string>
    <string name="OkButton">确定</string>
    <string name="CancelButton">取消</string>
    <string name="AcceptButton">认证</string>
    <string name="RefuseButton">拒绝</string>
    <string name="agreeButton">同意</string>
    <string name="per_notes">作 品</string>
    <string name="per_add_friends">加好友</string>
    <string name="per_report">举&#160;&#160;&#160;&#160;报</string>
    <string name="per_step_back">回退</string>
    <string name="per_commit">提交</string>
    <string name="per_comment">我要评论</string>
    <string name="per_just_save">保存</string>
    <string name="pre_reset">重置</string>
    <string name="per_delete">删除</string>
    <string name="per_used_color">记忆色</string>
    <string name="per_basic_color">基本色</string>
    <string name="per_canvas_scale">画布比例</string>
    <string name="per_tool">工具</string>
    <string name="per_thickness">粗&#160;&#160;&#160;&#160;细</string>
    <string name="per_color">颜&#160;&#160;&#160;&#160;色</string>
    <string name="per_eraser">橡皮擦</string>
    <string name="per_palette">调色盘</string>
    <string name="per_paint_kettle">油漆桶</string>
    <string name="per_transparency">透明度</string>
    <string name="per_pickcolor">取色</string>
    <string name="per_pickcolor_cancel">非取色</string>
    <string name="per_more">更多</string>
    <string name="per_layer">图层</string>
    <string name="per_chat">聊&#160;&#160;&#160;&#160;天</string>
    <string name="OkBut_space">确&#160;&#160;&#160;定</string>
    <string name="cancelBut_space">取&#160;&#160;&#160;消</string>
    <string name="refuseBut_space">拒&#160;&#160;&#160;绝</string>
    <string name="downBut_space">下&#160;&#160;&#160;载</string>
    <string name="commitBut_space">提&#160;&#160;&#160;交</string>
    <string name="HuaLiaoServiceDescription">使用画吧服务</string>
    <string name="AddCOkButton">添加</string>
    <string name="history">历史记录</string>
    <string name="draw_note_str">草&#160;&#160;&#160;&#160;稿</string>
    <string name="open_native_avatar">头像</string>
    <string name="delete_native">删除</string>
    <string name="personal_note">个人作品(%1$s)</string>
    <string name="personal_book">个人绘本(%1$s)</string>
    <string name="participate">我要参加</string>
    <string name="start_draw_str">开始画吧!</string>
    <string name="SubscriptAccept">订阅已经接受</string>
    <string name="SubscriptError">订阅错误</string>
    <string name="SubscriptRefused">订阅被拒绝</string>
    <string name="SubscriptText">%s 想要添加你到他/她的好友列表.批准他/她的请求吗?</string>
    <string name="SubscriptTitle">批准好友请求?</string>
    <string name="AcceptContactRequest">%s刚将你添加到他/她的好友列表.</string>
    <string name="AcceptContactRequestFrom">批准%s联系你</string>
    <string name="contact_list_all_contact">所有联系人</string>
    <string name="contact_list_no_group">没有组</string>
    <string name="userinfo_label_delete">删除</string>
    <string name="chat_name">Beem - 聊天</string>
    <string name="chat_send_message">发送</string>
    <string name="chat_state_composing">正在输入信息</string>
    <string name="chat_state_gone">已经离开了会话</string>
    <string name="chat_state_active">关注会话</string>
    <string name="chat_state_inactive">正在做其他事情</string>
    <string name="chat_otrstate_plaintext">PLAINTEXT</string>
    <string name="chat_otrstate_encrypted">ENCRYPTED</string>
    <string name="chat_otrstate_finished">FINISHED</string>
    <string name="chat_otrstate_authenticated">AUTHENTICATED</string>
    <string name="mtm_notification">Certificate Verification</string>
    <string name="error_login_authentication">验证时发生错误,用户名或者密码错误.</string>
    <string name="upload_avatar_failed">上传失败,请稍后重试!</string>
    <string name="service_unavailable">请确认网络是否顺畅,稍后再试。</string>
    <string name="create_tag_failed">创建失败,请重试</string>
    <string name="enter_game">首&#160;&#160;页</string>
    <string name="personal_settings">我的</string>
    <string name="friends_list">好&#160;&#160;友</string>
    <string name="message_list">消&#160;&#160;息</string>
    <string name="system_help">系统帮助</string>
    <string name="attention_person">关注人列表</string>
    <string name="avatar">头像</string>
    <string name="avatar_unknow">未知头像</string>
    <string name="avatar_save">头像已保存</string>
    <string name="disc">请插入存储卡</string>
    <string name="fail">操作失败，请检查存储卡</string>
    <string name="excellent_pieces">优秀作品</string>
    <string name="feedback">建议反馈与FAQ</string>
    <string name="tips">DIY头像</string>
    <string name="nick_name">个人昵称</string>
    <string name="reward_nick">昵称</string>
    <string name="signature">个性签名</string>
    <string name="signature1">个性签名:</string>
    <string name="relation_str1">关　系:</string>
    <string name="status_offline_str">离线</string>
    <string name="status_online_str">在线</string>
    <string name="friend_nick_name_edit">添加好友</string>
</resources>